Margin and padding start

--- a/HTML1.html
+++ b/HTML1.html
@@ -6,7 +6,9 @@
     </head>
     <body>
         <div>
-            <blockquote><h1>Master Yi</h1></blockquote>
+            <blockquote><p class = "h1">
+                Master Yi
+            </p></blockquote>
 
             <img width = "300" src="images/Yi_splash_art.jpg">
 
@@ -21,3 +23,11 @@
     height: 200px;
     background-color: green;
 } -->
+<style>
+    .h1{
+        
+        /* margin-left: 300px; */
+        padding: 20px;
+        border: 5px outset red;
+    }
+</style>
