--- a/HTML2.html
+++ b/HTML2.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html>
-    <title>Click</title>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
     <body>
-        <div>
+        <div>   
             <a href="HTML1.html" target ="_blank"><img height = 200 src="images/yi_base.jpg"></a>
             <br></br>
             <a href="HTML1.html" target ="_blank">Click me</a>
