Thêm file style.css

--- a/Main.html
+++ b/Main.html
@@ -1,81 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" class="backgound_color_1">
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
-    <head>
-        <p class="web_title">
-        GearVN.com
-    </p>    
-    </head>
-    <body class="body">
-        <table>
-
-        </table>
-    </body>
+</head>
+<body>
+    <div class="box">
+        <div class ="form">
+            <h2>Sign in</h2>
+            <div class="inputBox">
+                <input type ="text" required="required">
+                <span>Username</span>
+                <i></i>
+            <div class="inputBox">
+                <input type ="text" required="required">
+                <span>Password</span>
+                <i></i>
+            </div>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- ============================================================================================================================================ -->
-<style>
-    .box{
-        width:80%;
-        height: 60%;
-        background-color: red;
-    }
-    .body{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .items_box{
-        width:30ch;
-        height: 60ch;
-        background-color: red;
-    }
-    .web_title{
-        padding-left: 20%;
-        padding-bottom:2ch;
-        font-size: 40px;
-        color: rgba(0, 4, 255, 0.562);
-        height: 50px; 
-        width:50ch; 
-        box-sizing: border-box;
-        border: 5px outset red;
-        background-color:rgba(91, 253, 140, 0.788);
-    }
-    .items_align{
-        margin: auto;
-        border: 10px outset black;
-    }
-    .backgound_color_1{
-        background-color: rgb(202, 197, 197);
-    }
-</style>
