Hoàn thành HTML
THêm hiệu ứng

--- a/Main.html
+++ b/Main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<title>User Login</title>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,12 +16,18 @@
                 <input type ="text" required="required">
                 <span>Username</span>
                 <i></i>
+            </div>
             <div class="inputBox">
                 <input type ="text" required="required">
                 <span>Password</span>
                 <i></i>
             </div>
+            <div class="links">
+                <a class="links-color" href="#" target="_blank">Forgot Password?</a>
+                <a class="links-color" href="#" target="_blank">Sign up</a>
             </div>
+            <d1></d1>
+            <input type="submit" value = "Login">
         </div>
     </div>
 </body>
